syntax = "proto3";

package chat;

option go_package = "./internal/chat";

service Chat {
    rpc Stream(stream StreamRequest) returns (stream StreamResponse){}
}

message  StreamRequest {

    oneof event {
        Authorization req_Authorization = 2;
        SendMessage req_SendMessage = 3;
        CreateRoom req_createRoom = 4;
    }

    message Authorization {
        string name =1;
    }

    message SendMessage {
        int64 roomId = 1;
        string text = 2;
    }

    message CreateRoom {
        repeated int64 users =1;
    }

}
message  StreamResponse {

    oneof event {
        Message resp_message = 1;
        CreateRoom resp_createRoom = 2;
        ErrorMessage resp_errorMessage = 3;
    }

    message  ErrorMessage {
        string event =1;
        string couse = 2;
    }

    message Message {
        int64 roomId =1;
        int64 userId =2;
        string text = 3;
        int64 createdAt = 4;
    }
    message CreateRoom {
        int64 roomId =1;
        repeated int64 users = 2;
        int64 createdAt = 3;
    }
}